Add: api for steps
+ Edit: swagger
